# PROJ

./: .Rbuildignore  .gitattributes  .gitignore  .travis.yml  404.html  CODE_OF_CONDUCT.html  DESCRIPTION  Dockerfile  INSTALL.out  NAMESPACE  NEWS.md  PROJ.Rproj  README.Rmd  README.md  appveyor.yml  apt_.travis.yml  authors.html  cleanup  configure  configure.ac  cran-comments.md  index.html  pkgdown.yml  sitemap.xml  src_.travis.yml
.github/workflows/: R-CMD-check-autotools.yaml  R-CMD-check-none.yaml  R-CMD-check.yaml  check-standard.yaml  check-standard_yaml
R/: PROJ-package.R  RcppExports.R  ok_proj6.R  proj-info.R  proj_create.R  proj_crs_text.R  proj_factors.R  proj_trans.R  proj_trans_generic.R  proj_version.R  reproj_PROJ.R  sysdata.rda  utils.R  wk-trans.R  zzz.R
articles/: PROJ.html  index.html
ci/travis/no_proj/: before_install.sh
ci/travis/ppa-libproj-dev/: before_install.sh
ci/travis/proj4/: before_install.sh
ci/travis/proj5/: before_install.sh
ci/travis/proj6/: before_install.sh
ci/travis/proj7/: before_install.sh
data/: xymap.rda
data-raw/: DATASET.R
docker/clang/: Dockerfile
docs/: 404.html  CODE_OF_CONDUCT.html  authors.html  index.html  pkgdown.yml
docs/articles/: PROJ.html  index.html
docs/news/: index.html
docs/reference/: PROJ-package.html  index.html  ok_proj6.html  proj_create.html  proj_trans_generic.html  xymap.html
guff/: C_old_proj.c  Makevars.in  configure.ac
inst/: WORDLIST
inst/ci/: CHECK.out  INSTALL.out  TEST.out  VALGRIND.out  VALGRINDfull.out
man/: PROJ-package.Rd  ok_proj6.Rd  proj_create.Rd  proj_crs_text.Rd  proj_factors.Rd  proj_trans.Rd  proj_trans_create.Rd  proj_trans_generic.Rd  proj_version.Rd  reproj_PROJ.Rd  xymap.Rd
news/: index.html
reference/: PROJ-package.html  index.html  ok_proj6.html  proj_create.html  proj_crs_text.html  proj_factors.html  proj_trans.html  proj_trans_create.html  proj_trans_generic.html  proj_version.html  xymap.html
revdep/: README.md  data.sqlite  failures.md
revdep/checks/: libraries.csv
revdep/checks/reproj/new/: libraries.txt
revdep/checks/reproj/new/reproj.Rcheck/: 00install.out  reproj-Ex.Rout
revdep/checks/reproj/new/reproj.Rcheck/tests/: testthat.Rout.fail
revdep/checks/reproj/old/: libraries.txt
revdep/checks/reproj/old/reproj.Rcheck/: 00install.out  reproj-Ex.R  reproj-Ex.Rout
revdep/checks/reproj/old/reproj.Rcheck/tests/: testthat.R
revdep/checks/reproj/old/reproj.Rcheck/tests/testthat/: test-reproj-PROJ.R  test-reproj-proj4.R
src/: C_proj_create.c  C_proj_crs_text.c  C_proj_factors.c  C_proj_trans.c  C_proj_trans_generic.c  C_proj_trans_generic.gcda  C_proj_trans_generic.gcno  C_proj_version.c  C_proj_version.gcda  C_proj_version.gcno  C_set_data_dir.c  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  PROJ.cpp  R_proj_transform.c  RcppExports.cpp  init.c  init2.c  libproj-impl.c  proj-context.c  proj-context.h  proj-utils.c  proj-utils.h  proj_trans.c  proj_trans_base.c  r-utils.c  r-utils.h  wk-trans.c  xptr.c
tests/: testthat.R
tests/testthat/: test-PROJ.R  test-create.R  test-no-crash.R  test-out-of-bounds.R  test-proj_factors.R  test-proj_trans.R  test-sanity-inputs.R  test-version.R  test-wk-trans.R
tools/: winlibs.R
vignettes/: PROJ.Rmd  PROJ.Rmd.orig
